--- a/src/views/email/welcome.pug
+++ b/src/views/email/welcome.pug
@@ -2,14 +2,5 @@ extends baseEmail
 
 block content
   p Здравствуйте, #{firstName}!
-  p Вы успешно зарегистрировались в UFC EVENTS!
+  p Вы успешно зарегистрировались в UFC EVENTS!!!
   
-  table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
-    tbody
-      tr
-        td(align='left')
-          table(role='presentation', border='0', cellpadding='0', cellspacing='0')
-            tbody
-              tr
-                td
-                  a(href=`${url}`, target='_blank') Загрузить аватар профиля
